log/build_2024-02-06_16-28-59/aqua_line/stderr.log
  File "/home/ajbam/aquaLine/install/aqua_line/lib/python3.8/site-packages/aqua_line/stabilize.py", line 5
    import .geometry
           ^
SyntaxError: invalid syntax

